# cpp-prueba-arandasoft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
appdb/: CMakeLists.txt
appdb/include/: appdb.h  taskmodel.h
appdb/src/: appdb.cpp
appdb/test/: CMakeLists.txt  appdbtest.cpp
cpuinfo/: CMakeLists.txt
cpuinfo/include/: cpuinfo.h
cpuinfo/src/: cpuinfo_linux.cpp  cpuinfo_macos.cpp  cpuinfo_win.cpp
cpuinfo/test/: CMakeLists.txt  cpuinfotest.cpp
fileinfo/: CMakeLists.txt
fileinfo/include/: fileinfo.h
fileinfo/src/: fileinfo_unix.cpp  fileinfo_win.cpp
fileinfo/test/: CMakeLists.txt  fileinfotest.cpp
scheduler/: CMakeLists.txt
scheduler/test/: CMakeLists.txt  scheduletest.cpp
socket/: CMakeLists.txt
socket/include/: socket.h
socket/src/: socket_unix.cpp  socket_win32.cpp
socket/test/: CMakeLists.txt  sockettest.cpp
taskmanager/: CMakeLists.txt
taskmanager/include/: taskmanager.h
taskmanager/src/: taskmanager.cpp
taskmanager/test/: CMakeLists.txt  taskmanagertest.cpp
